--- a/Diffuser-java/examples/pom.xml
+++ b/Diffuser-java/examples/pom.xml
@@ -67,5 +67,10 @@
             <artifactId>examples</artifactId>
             <version>0.6.0</version>
         </dependency>
+            <dependency>
+                <groupId>commons-cli</groupId>
+                <artifactId>commons-cli</artifactId>
+                <version>1.9.0</version>
+            </dependency>
     </dependencies>
 </project>
