--- a/Diffuser-java/diffuser/pom.xml
+++ b/Diffuser-java/diffuser/pom.xml
@@ -39,5 +39,11 @@
         <artifactId>api</artifactId>
         <version>0.33.0</version>
     </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
